--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header>
             <div class="logo-container">
-                <img src="https://via.placeholder.com/200x80/2E8B57/FFFFFF?text=SUD+Rail" alt="SUD Rail" class="logo">
+                <img src="logo-sud-rail.png" alt="SUD Rail" class="logo" onerror="this.src='https://via.placeholder.com/200x80/2E8B57/FFFFFF?text=SUD+Rail'">
             </div>
             <h1>Inscription Forum Contractuels SUD Rail</h1>
             <p class="event-info">
@@ -25,13 +25,24 @@
                 <p class="intro">Complétez le formulaire ci-dessous pour vous inscrire au forum. Tous les champs sont obligatoires.</p>
                 
                 <form id="inscriptionForm">
-                    <div class="form-group">
-                        <label for="nomPrenom">
-                            <span class="label-text">Nom / Prénom</span>
-                            <span class="required">*</span>
-                        </label>
-                        <input type="text" id="nomPrenom" name="nomPrenom" required maxlength="100" placeholder="Ex: Dupont Jean">
-                        <div class="error-message" id="nomPrenomError"></div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="nom">
+                                <span class="label-text">Nom</span>
+                                <span class="required">*</span>
+                            </label>
+                            <input type="text" id="nom" name="nom" required maxlength="50" placeholder="Ex: Bleubar">
+                            <div class="error-message" id="nomError"></div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="prenom">
+                                <span class="label-text">Prénom</span>
+                                <span class="required">*</span>
+                            </label>
+                            <input type="text" id="prenom" name="prenom" required maxlength="50" placeholder="Ex: Karine">
+                            <div class="error-message" id="prenomError"></div>
+                        </div>
                     </div>
 
                     <div class="form-group">
@@ -39,7 +50,7 @@
                             <span class="label-text">Numéro de CP</span>
                             <span class="required">*</span>
                         </label>
-                        <input type="text" id="numeroCP" name="numeroCP" required pattern="[0-9]{5}" maxlength="5" placeholder="Ex: 75012">
+                        <input type="text" id="numeroCP" name="numeroCP" required maxlength="10" placeholder="Ex: 8710320P">
                         <div class="validation-message" id="cpValidation"></div>
                         <div class="error-message" id="numeroCPError"></div>
                     </div>
@@ -49,7 +60,7 @@
                             <span class="label-text">Lieu d'affectation (UO)</span>
                             <span class="required">*</span>
                         </label>
-                        <input type="text" id="lieuAffectation" name="lieuAffectation" required maxlength="100" placeholder="Ex: Gare du Nord">
+                        <input type="text" id="lieuAffectation" name="lieuAffectation" required maxlength="100" placeholder="Ex: UO PCD-COGC">
                         <div class="error-message" id="lieuAffectationError"></div>
                     </div>
 
