🔗 Logo cliquable vers site SUD Rail + suppression fond transparent

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>Inscription Forum Contractuels SUD Rail</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="logo-only-header">
     <div class="container">
         <header>
             <div class="logo-container">
-                <img src="logo-sud-rail.png" alt="SUD Rail" class="logo" onerror="this.src='https://via.placeholder.com/200x80/2E8B57/FFFFFF?text=SUD+Rail'">
+                <a href="https://sudrail.fr/SUD-Rail-Paris-Nord" target="_blank" rel="noopener noreferrer">
+                    <img src="https://via.placeholder.com/300x120/2E8B57/FFFFFF?text=SUD+Rail+Paris+Nord" alt="SUD Rail Paris Nord" class="logo">
+                </a>
             </div>
             <h1>Inscription Forum Contractuels SUD Rail</h1>
             <p class="event-info">
