🎨 Remplacement par logo CSS stylisé (plus d'image externe)

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <div class="container">
         <header>
             <div class="logo-container">
-                <a href="https://sudrail.fr/SUD-Rail-Paris-Nord" target="_blank" rel="noopener noreferrer">
-                    <img src="https://via.placeholder.com/300x120/2E8B57/FFFFFF?text=SUD+Rail+Paris+Nord" alt="SUD Rail Paris Nord" class="logo">
+                <a href="https://sudrail.fr/SUD-Rail-Paris-Nord" target="_blank" rel="noopener noreferrer" class="logo-text">
+                    <div class="logo-main">SUD</div>
+                    <div class="logo-sub">Rail</div>
+                    <div class="logo-region">Région de Paris Nord</div>
                 </a>
             </div>
             <h1>Inscription Forum Contractuels SUD Rail</h1>
