🔄 Mise à jour admin.html avec EmailJS pour vrais emails

--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administration - SUD Rail</title>
     <link rel="stylesheet" href="admin.css">
+    <!-- EmailJS pour l'envoi d'emails -->
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 </head>
 <body>
     <!-- Page de connexion -->
@@ -103,8 +105,9 @@
                         <label for="notificationEmail">Email de notification :</label>
                         <input type="email" id="notificationEmail" value="karinesudrail@gmail.com">
                         <button id="updateEmailBtn" class="btn-secondary">Mettre à jour</button>
-                        <button id="testEmailBtn" class="btn-secondary">Test</button>
+                        <button id="testEmailBtn" class="btn-secondary">Test Email</button>
                     </div>
+                    <div class="email-status" id="emailStatus"></div>
                 </div>
             </section>
 
@@ -215,5 +218,11 @@
     <script src="config/supabase.js"></script>
     <script src="config/constants.js"></script>
     <script src="admin.js"></script>
+    <script>
+        // Configuration EmailJS
+        (function() {
+            emailjs.init("YOUR_PUBLIC_KEY"); // À remplacer par votre clé publique EmailJS
+        })();
+    </script>
 </body>
 </html>
